[gd_scene load_steps=7 format=1]

[ext_resource path="res://scenes/gui/gui.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/back.png" type="Texture" id=2]
[ext_resource path="res://resources/ui/map.png" type="Texture" id=3]
[ext_resource path="res://scenes/tilesets/tileset_map.tres" type="TileSet" id=4]
[ext_resource path="res://resources/tiles/deko/lamp.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource/name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Color( 1, 0, 0, 1 ), Color( 1, 0.960938, 0, 1 ) ] }

[node name="gui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Patch9Frame" type="Patch9Frame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 704.0
texture = ExtResource( 2 )
modulate = Color( 0.339844, 0.248245, 0.248245, 1 )
patch_margin/left = 10
patch_margin/top = 10
patch_margin/right = 10
patch_margin/bottom = 10

[node name="map" type="Patch9Frame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 660.0
margin/top = 32.0
margin/right = 34.0
margin/bottom = 736.0
texture = ExtResource( 3 )
patch_margin/left = 10
patch_margin/top = 10
patch_margin/right = 10
patch_margin/bottom = 10

[node name="TileMap" type="TileMap" parent="map"]

transform/pos = Vector2( 158, 84 )
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 0.0
collision/bounce = 0.0
collision/layers = 0
collision/mask = 0
occluder/light_mask = 0
tile_data = IntArray( 0, 0 )

[node name="Sprite" type="Sprite" parent="map"]

transform/pos = Vector2( 166, 92 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
modulate = Color( 1, 0.716128, 0, 1 )

[node name="idle" type="AnimationPlayer" parent="map/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="lbl_fps1" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 20.0
margin/right = 55.0
margin/bottom = 36.0
text = "fps:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_fps" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 20.0
margin/right = 160.0
margin/bottom = 36.0
text = "90"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_obj" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 50.0
margin/right = 126.0
margin/bottom = 66.0
text = "90"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_player_pos" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 120.0
margin/right = 236.0
margin/bottom = 136.0
text = "90"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_camera_pos" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 150.0
margin/right = 236.0
margin/bottom = 166.0
text = "90"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_mouse_pos" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 180.0
margin/right = 236.0
margin/bottom = 196.0
text = "90"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_camera" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 150.0
margin/right = 80.0
margin/bottom = 166.0
text = "camera:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_player" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 120.0
margin/right = 70.0
margin/bottom = 136.0
text = "player:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_mouse" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 180.0
margin/right = 70.0
margin/bottom = 196.0
text = "mouse:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 40.0

[node name="lbl_room" type="Label" parent="Control"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 20.0
margin/right = 72.0
margin/bottom = 36.0
text = "ROOM"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_wall" type="Label" parent="Control"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 80.0
margin/right = 72.0
margin/bottom = 96.0
text = "Wall:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text" type="Label" parent="Control/lbl_wall"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 0.0
margin/right = 87.0
margin/bottom = 16.0
text = "1"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_biom" type="Label" parent="Control"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 50.0
margin/right = 72.0
margin/bottom = 66.0
text = "Biom:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text" type="Label" parent="Control/lbl_biom"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 0.0
margin/right = 87.0
margin/bottom = 16.0
text = "1"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


